made authors column fixed and overflow scrolling

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -95,18 +95,14 @@ ul {
 
 #authors-column {
   float: left;
-  /*height: 100%;*/
+  height: 100%;
   position: fixed;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 #authors-column > ul {
-  display: block;
-  position: static;
   height: 100%;
-  overflow: scroll;
   margin-left: 5px;
-  margin-top: 0;
 }
 
 #authors-column li {
